# ASUSRouterControl

./: .env.example  .gitignore  AGENTS.md  AsusRouterMonitor — macOS Menubar Applet.md  AsusRouterMonitor.spec  Makefile  README.md  pyproject.toml  test_menubar.py  test_pyobjc_bar.py  userguide.md
.github/workflows/: ci.yml
Plans/: RT-AC68U Deep Dive_ Performance Enhancement Analysis.md
archive/ASUSRouterControl_Claude/: .env.example  AGENTS.md  Makefile
archive/ASUSRouterControl_Claude/.claude/: settings.local.json
archive/ASUSRouterControl_Claude/scripts/: analyze_router_performance.py
archive/ASUSRouterControl_Claude/src/asusroutercontrol/: __init__.py  _time.py  analyzer.py  benchmark.py  cli.py  datastore.py  dhcp_profiles.py  executor.py  menubar.py  models.py  probes.py  scheduler.py  speedtest.py  speedtest_providers.py
archive/ASUSRouterControl_Claude/src/asusroutercontrol/analysis/: clients.py
archive/ASUSRouterControl_Claude/src/asusroutercontrol/backends/: base.py  freshtomato.py  merlin.py
archive/ASUSRouterControl_Claude/tests/: conftest.py  test_credentials.py  test_dhcp_reservations.py  test_imports.py
archive/ASUSRouterControl_legacy/: README.md
scripts/: validate.sh
src/asusroutercontrol/: _cli.py  analyzer.py  cli.py  config.py  credentials.py  datastore.py  dhcp_profiles.example.toml  dhcp_profiles.py  dhcp_reservations.py  executor.py  incident.py  menubar.py  models.py  notifications.py  optimizer.py  probes.py  reporting.py  rollout.py  scheduler.py  service.py  speedtest.py  speedtest_providers.py  ssh.py
src/asusroutercontrol/analysis/: clients.py  dashboard.py  devices.py  security.py  traffic.py
src/asusroutercontrol/backends/: __init__.py  base.py  factory.py  freshtomato.py  merlin.py
src/asusroutercontrol/cli/: __init__.py  analysis.py  clients.py  dhcp.py  optimize.py
src/asusroutercontrol/integrations/: soundshield.py
src/asusroutercontrol/merlin/: __init__.py  entware.py  jffs.py
tests/: conftest.py  test_analysis_optimizer.py  test_backend_freshtomato.py  test_backend_merlin_port_forwarding.py  test_backends_factory.py  test_calibration_replay.py  test_client_loads.py  test_clients.py  test_config.py  test_credentials.py  test_dashboard.py  test_dashboard_cli.py  test_datastore_quality.py  test_dhcp_reservations.py  test_incident_workflow.py  test_notifications.py  test_optimize_benchmark.py  test_probe_latency_parse.py  test_probes_config.py  test_probes_interfaces.py  test_probes_wired_clients.py  test_scheduler_notifications.py  test_security_regressions.py  test_speedtest_cli.py  test_speedtest_orchestration.py  test_speedtest_providers.py
tests/fixtures/: calibration_manifest.json  conntrack_pressure.json  healthy_baseline.json  isp_congestion.json  thermal_drift.json  wifi_noise_degradation.json
