[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asusroutercontrol"
version = "0.1.0"
description = "Management and analysis tool for ASUS RT-AC68U routers"
requires-python = ">=3.11"
dependencies = [
    "asusrouter>=1.21",
    "aiohttp>=3.9",
    "keyring>=25.0",
    "pydantic>=2.0",
    "click>=8.1",
    "aiosqlite>=0.20",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "asyncssh>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]
menubar = [
    "pyobjc-core>=12.1",
    "pyobjc-framework-cocoa>=12.1",
]

[project.scripts]
asusrouter = "asusroutercontrol.cli:cli"
asusroutermonitor = "asusroutercontrol.menubar:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
