[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asusroutercontrol"
version = "0.1.0"
description = "Management and analysis tool for ASUS RT-AC68U routers"
requires-python = ">=3.11"
dependencies = [
    "asusrouter>=1.21",
    "aiohttp>=3.9",
    "keyring>=25.0",
    "pydantic>=2.0",
    "click>=8.1",
    "aiosqlite>=0.20",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "asyncssh>=2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.3",
    "tomli>=2.0; python_version < '3.11'",
]
menubar = [
    "pyobjc-core>=12.1",
    "pyobjc-framework-cocoa>=12.1",
]

[project.scripts]
asusrouter = "asusroutercontrol._cli:cli"
asusroutermonitor = "asusroutercontrol.menubar:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
asusroutercontrol = ["*.toml"]  # ships dhcp_profiles.example.toml

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "DTZ"]
# B — flake8-bugbear: catches common Python footguns
# DTZ — flake8-datetimez: enforces timezone-aware datetime; prevents datetime.utcnow() regression
ignore = [
    "B008",   # do-not-perform-function-call-in-default-argument (ok in Click commands)
    "B904",   # raise-without-from-inside-except (too noisy in legacy exception paths)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/asusroutercontrol"]
omit = ["src/asusroutercontrol/menubar.py"]  # requires PyObjC / macOS

[tool.coverage.report]
show_missing = true
fail_under = 30  # floor today; raise incrementally as tests are added
